Fortran/IBM/compile/F2008/intrinsics/error/unit_tests/erfc_scaled01ad.scenario
#BEGINSCENARIO
#BEGINDOC
#NAME=F2008/intrinsics/error/unit_tests/erfc_scaled01ad.scenario
#FEATURE = F2008 ERFC_SCALED intrinsic
#DATE    = 20110501
#TEST_TYPE=unit
#ENDDOC

#BEGINENV
#INVALID_XOPTS  = $(F_COMPILE^OPT_OPTIMIZE_FOR_SMP) $(F_COMPILE^OPT_OPTIMIZE_FOR_SMP_NOOPT)
#BEGINDEFS
#ENDDEFS
#ENDENV

#BEGINCONTROL

#CMD       = XLF2003_COMPILE
#INPUT     = $(tcasedir)erfc_scaled01a.f
#OPTS      = $(OPT_SET_LANG_LEVEL<2003std>)
#STDERR    = erfc_scaled01ad.err
#ENDCMD

#CMD       = XLDIFF
#INPUT     = $($(tcasedir)erfc_scaled01ad$(product)vf) erfc_scaled01ad.err
#ENDCMD

#ENDCONTROL
#ENDSCENARIO
